# dupocalypse

./: Cargo.toml  README.md  build.rs  dupocalyse
.github/workflows/: github-actions.yml
cli/: Cargo.toml
cli/src/: lib.rs
doc/: Design.md  Environment.md  Use Cases.md
scripts/: kernel-source-test  rolling-snaps-test
src/: archive.rs  chunkers.rs  config.rs  content_sensitive_splitter.rs  create.rs  cuckoo_filter.rs  dump_stream.rs  hash.rs  lib.rs  list.rs  main.rs  pack.rs  paths.rs  recovery.rs  stream.rs  stream_builders.rs  unpack.rs  utils.rs
src/slab/: builder.rs  compression_service.rs  file.rs  mod.rs  multi_file.rs  offsets.rs  storage.rs
src/slab/file/: tests.rs
test/: vm_test.sh
tests/: fixture.rs  pack.rs  recovery.rs  unpack.rs  verify.rs
tests/common/: dupocalypse.rs  fixture.rs  mod.rs  process.rs  random.rs  targets.rs  test_dir.rs
