[package]
name = "dupocalypse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
blake2 = "0.10"
blake3 = "1"
byteorder = "1.4"
chrono = "0.4"
clap = { version = "4.5.26", features = ["cargo", "env"] }
cli = { path = "./cli" }
crc = "3"
devicemapper = { git = "https://github.com/stratis-storage/devicemapper-rs", branch = "master" }
gearhash = "0.1.3"
generic-array = "0.14"
serde_json = "1.0.96"
libc = "0.2"
linked-hash-map = "0.5.6"
lru = "0.12.5"
memmap2 = "0.9"
nix = { version = "0.29", features = ["process", "signal"] }
nom = "7.1"
num_enum = "0.7.3"
rand = "0.8"
rand_chacha = "0.3"
roaring = "0.10.10"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
size-display = "0.1.4"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", tag = "v1.1.0" }
# thinp = { path = "../thinp-for-dm-archive/" }
udev = "0.9.1"
walkdir = "2"
zstd = "0.13.2"

[build-dependencies]
anyhow = "1.0"
cli = { path = "cli" }
clap = { version = "4.5.26", features = ["cargo", "env"] }
clap_mangen = "0.2"
chrono = "0.4"
glob = "0.3"
regex = "1.0"

[dev-dependencies]
duct = "0.13"
serde_json = "1.0"
tempfile = "3.16"

[features]
skip_cleanup = []

[[bin]]
name = "slab-verify"
path = "src/bin/slab_verify.rs"

[profile.release]
debug = 1

[[bin]]
name = "dupocalypse"
path = "src/main.rs"
